--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,18 @@
 .App-link {
   color: #09d3ac;
 }
+
+.Result {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  border: 3px solid black;
+  border-radius: 5px;
+}
+.content-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
