--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,15 @@
   color: #09d3ac;
 }
 
-.Result {
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+
+.result {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,9 +37,18 @@
   text-align: center;
   border: 3px solid black;
   border-radius: 5px;
+  padding: 10px;
+  margin: 5px;
 }
 .content-box {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+}
+
+.content-left {
+  width: 40%;
+}
+.content-right {
+  width: 60%;
 }
